# opensearch-py-ml

./: .buildinfo  .dockerignore  .gitignore  CHANGELOG.md  CHANGELOG.rst  COMPATIBILITY.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  MAINTAINERS.md  MANIFEST.in  Pipfile  README.md  RELEASING.md  config.ini  conftest.py  demo.ipynb  demo_ml_commons_integration.ipynb  demo_notebook.ipynb  genindex.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  setup_tests.py  truncated_data.csv
.ci/: Dockerfile.client  imports.sh  run-opensearch.sh  run-repository.sh  run-tests  test-matrix.yml
.github/: CODEOWNERS  dependabot.yml
_modules/: index.html
_sources/: index.rst.txt
_static/: documentation_options.js
cli/: create_connector.html  index.html  predict_model.html  register_model.html  setup.html
docs/: requirements-docs.txt
eland/: dataframe.py  etl.py  field_mappings.py  filter.py  ndframe.py  operations.py  query_compiler.py  sagemaker_tools.py  series.py
examples/: demo_deploy_cliptextmodel.html  demo_deploy_cliptextmodel.ipynb  demo_metrics_correlation.html  demo_metrics_correlation.ipynb  demo_ml_commons_integration.html  demo_ml_commons_integration.ipynb  demo_notebook.html  demo_notebook.ipynb  demo_notebook_for_sentence_transformer_model_training_and_uploading_to_openSearch.html  demo_notebook_for_sentence_transformer_model_training_and_uploading_to_openSearch.ipynb  demo_tracing_model_torchscript_onnx.html  index.html  online_retail_analysis.html  (+6 more)
(+1001 files in other folders)
